// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StreetMetaWidthMenu renders (imperial units, default width selected) 1`] = `
<DocumentFragment>
  <select
    class="street-width-select"
  >
    <option
      disabled=""
    >
      Occupied width:
    </option>
    <option
      disabled=""
    >
      10′
    </option>
    <option
      disabled=""
    />
    <option
      disabled=""
    >
      Building-to-building width:
    </option>
    <option
      value="40"
    >
      40′
    </option>
    <option
      value="60"
    >
      60′
    </option>
    <option
      value="80"
    >
      80′
    </option>
    <option
      value="-1"
    >
      Different width…
    </option>
    <option
      disabled=""
    />
    <option
      disabled=""
      id="switch-to-imperial-units"
      value="-3"
    >
      Switch to imperial units (feet)
    </option>
    <option
      id="switch-to-metric-units"
      value="-2"
    >
      Switch to metric units
    </option>
  </select>
</DocumentFragment>
`;

exports[`StreetMetaWidthMenu renders (metric units, custom width selected) 1`] = `
<DocumentFragment>
  <select
    class="street-width-select"
  >
    <option
      disabled=""
    >
      Occupied width:
    </option>
    <option
      disabled=""
    >
      3 m
    </option>
    <option
      disabled=""
    />
    <option
      disabled=""
    >
      Building-to-building width:
    </option>
    <option
      value="40"
    >
      12 m
    </option>
    <option
      value="60"
    >
      18 m
    </option>
    <option
      value="80"
    >
      24 m
    </option>
    <option
      disabled=""
    />
    <option
      value="10"
    >
      3 m
    </option>
    <option
      value="-1"
    >
      Different width…
    </option>
    <option
      disabled=""
    />
    <option
      id="switch-to-imperial-units"
      value="-3"
    >
      Switch to imperial units (feet)
    </option>
    <option
      id="switch-to-metric-units"
      value="-2"
    >
      Switch to metric units
    </option>
  </select>
</DocumentFragment>
`;

exports[`StreetMetaWidthMenu renders (metric units, default width selected) 1`] = `
<DocumentFragment>
  <select
    class="street-width-select"
  >
    <option
      disabled=""
    >
      Occupied width:
    </option>
    <option
      disabled=""
    >
      3 m
    </option>
    <option
      disabled=""
    />
    <option
      disabled=""
    >
      Building-to-building width:
    </option>
    <option
      value="40"
    >
      12 m
    </option>
    <option
      value="60"
    >
      18 m
    </option>
    <option
      value="80"
    >
      24 m
    </option>
    <option
      value="-1"
    >
      Different width…
    </option>
    <option
      disabled=""
    />
    <option
      id="switch-to-imperial-units"
      value="-3"
    >
      Switch to imperial units (feet)
    </option>
    <option
      id="switch-to-metric-units"
      value="-2"
    >
      Switch to metric units
    </option>
  </select>
</DocumentFragment>
`;
